-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.3, 6.7.2, 6.8.0 Beta3
-
None
-
different macOS version
-
-
2ef1a338a (dev), 400426c38 (6.8), 2584b4b6c (6.7), a3be4f048 (tqtc/lts-6.5)
There are crashes on QCocoaScreen::deliverUpdateRequests().
I started noticing this in our users' crash reports on AppCenter right after we switched on Metal RHI
backend. There were no such crashes with OpenGL RHI.
Unfortunately, I have no any reproducer at the moment.
I can only guess that this might happen during destruction of child windows.
Date/Time: 2024-08-31T13:20:39.999Z Launch Time: 2024-08-31T11:38:14Z OS Version: Mac OS X 14.6.1 (23G93) Report Version: 104 Exception Type: SIGSEGV Exception Codes: SEGV_MAPERR at 0x8 Crashed Thread: 0 Thread 0 Crashed: 0 QtGui 0x000000010aa7f8a0 qt_window_private(QWindow*) (qscopedpointer.h:112) 1 libqcocoa.dylib 0x000000010f655bf8 QCocoaScreen::deliverUpdateRequests() (qcocoascreen.mm:496) 2 libdispatch.dylib 0x0000000189a3d3e8 _dispatch_client_callout + 16 3 libdispatch.dylib 0x0000000189a408ec _dispatch_continuation_pop + 596 4 libdispatch.dylib 0x0000000189a547f0 _dispatch_source_latch_and_call + 416 5 libdispatch.dylib 0x0000000189a533b4 _dispatch_source_invoke + 828 6 libdispatch.dylib 0x0000000189a4bac8 _dispatch_main_queue_drain + 744 7 libdispatch.dylib 0x0000000189a4b7cc _dispatch_main_queue_callback_4CF + 40 8 CoreFoundation 0x0000000189d0ead4 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 12 9 CoreFoundation 0x0000000189ccc258 __CFRunLoopRun + 1992 10 CoreFoundation 0x0000000189ccb434 CFRunLoopRunSpecific + 604 11 HIToolbox 0x000000019447519c RunCurrentEventLoopInMode + 288 12 HIToolbox 0x0000000194474fd8 ReceiveNextEventCommon + 644 13 HIToolbox 0x0000000194474d30 _BlockUntilNextEventMatchingListInModeWithFilter + 72 14 AppKit 0x000000018d52acc8 _DPSNextEvent + 656 15 AppKit 0x000000018dd214d0 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 696 16 AppKit 0x000000018d51dffc -[NSApplication run] + 472 17 libqcocoa.dylib 0x000000010f63d888 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (qcocoaeventdispatcher.mm:406) 18 QtCore 0x000000010b742d84 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (qeventloop.cpp:100) 19 QtCore 0x000000010b739b68 QCoreApplication::exec() (qcoreapplication.cpp:1486)
- relates to
-
QTBUG-128390 Crash on QWindowPrivate::updateDevicePixelRatio() with nullptr access
-
- Closed
-
For Gerrit Dashboard: QTBUG-128516 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
587414,6 | QCocoaScreen: Account for platform window deletion during deliverUpdateRequest | dev | qt/qtbase | Status: MERGED | +2 | 0 |
588028,2 | QCocoaScreen: Account for platform window deletion during deliverUpdateRequest | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
588214,2 | QCocoaScreen: Account for platform window deletion during deliverUpdateRequest | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
588251,2 | QCocoaScreen: Account for platform window deletion during deliverUpdateRequest | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |